2nd attempt to center images

--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
       </p>
     </div>
     <h2 class="heading_text_2">Bag. That. Face.</h2>
-    <img id="cool_bag_man" src="images/cool_bag_man.jpg" alt="" />
-    <img id="cat_bag_mask" src="images/cat_bag_mask.jpg" alt="" />
-    <img id="stylish_bag_man" src="images/stylish_bag_man.jpeg" alt="" />
+    <div class="home_images">
+      <img id="cool_bag_man" src="images/cool_bag_man.jpg" alt="" />
+      <img id="cat_bag_mask" src="images/cat_bag_mask.jpg" alt="" />
+      <img id="stylish_bag_man" src="images/stylish_bag_man.jpeg" alt="" />
+    </div>
   </body>
 </html>
