--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <nav>
-        <a href="#home">Home</a>
+        <a href="index.html">Home</a>
         <a href="#about">About Us</a>
         <a href="#contact">Donate</a>
         <img class="header_logo" src="images/bag_mask_logo.png" alt="" />
