--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="styles.css" />
   <body>
     <div class="header">
+      <img id="header_logo" src="images/bag_mask_logo.png" alt="" />
       <nav>
         <a href="index.html">Home</a>
-        <a href="#about">About Us</a>
-        <a href="#contact">Donate</a>
-        <img class="header_logo" src="images/bag_mask_logo.png" alt="" />
+        <a href="#about">About</a>
+        <a href="#join">Join</a>
+        <a href="#contact">Contact</a>
+        <a href="#donate">Donate</a>
       </nav>
     </div>
     <h1 class="white_text_heading">No more good looking people!</h1>
@@ -28,10 +30,15 @@
       </p>
     </div>
     <h2 class="heading_text_2">Bag. That. Face.</h2>
-    <div class="home_images">
+    <div class="image_group1">
       <img id="cool_bag_man" src="images/cool_bag_man.jpg" alt="" />
-      <img id="cat_bag_mask" src="images/cat_bag_mask.jpg" alt="" />
+      <img id="family_bag_mask" src="images/family_bag_mask.jpg" alt="" />
       <img id="stylish_bag_man" src="images/stylish_bag_man.jpeg" alt="" />
+    </div>
+    <div class="image_group2">
+      <img id="bag_face_couple" src="images/bag_face_couple.jpg" alt="" />
+      <img id="cat_bag_mask" src="images/cat_bag_mask.jpg" alt="" />
+      <img id="bag_mask_party" src="images/bag_mask_party.jpg" alt="" />
     </div>
   </body>
 </html>
