--- a/index.html
+++ b/index.html
@@ -6,30 +6,31 @@
     <title>Bag Face Society</title>
   </head>
   <link rel="stylesheet" href="styles.css" />
-  <body>
+  <body class="page_background">
     <div class="header">
-      <img id="header_logo" src="images/bag_mask_logo.png" alt="" />
       <nav>
         <a href="index.html">Home</a>
-        <a href="#about">About</a>
-        <a href="#join">Join</a>
+        <a href="about.html">About Us</a>
+        <a href="join.html">Join</a>
         <a href="#contact">Contact</a>
         <a href="#donate">Donate</a>
       </nav>
+      <img id="header_logo" src="images/bag_mask_logo.png" alt="" />
+      <p class="header_name">Bag Face Society</p>
     </div>
     <h1 class="white_text_heading">No more good looking people!</h1>
     <img id="home_image" src="images/paper_bag_sale.jpg" alt="" />
-    <h2>Do you relate?</h2>
     <div class="text_background">
-      <p>
+      <h2 class="heading_text">Do you relate?</h2>
+      <p class="body_text">
         Aren't you tired of seeing beautiful people everywhere you go? Do you
         often feel inferior when you are in a room full of people who seem to
         have stepped off the cover of a Vouge magazine? Or on the flip side, do
         you get overwhelmed with people often staring at you for your good
         looks? If so, well fear not because we are going to...
       </p>
+      <h2 class="heading_text">Bag. That. Face.</h2>
     </div>
-    <h2 class="heading_text_2">Bag. That. Face.</h2>
     <div class="image_group1">
       <img id="cool_bag_man" src="images/cool_bag_man.jpg" alt="" />
       <img id="family_bag_mask" src="images/family_bag_mask.jpg" alt="" />
@@ -39,6 +40,16 @@
       <img id="bag_face_couple" src="images/bag_face_couple.jpg" alt="" />
       <img id="cat_bag_mask" src="images/cat_bag_mask.jpg" alt="" />
       <img id="bag_mask_party" src="images/bag_mask_party.jpg" alt="" />
+    </div>
+    <div class="text_background">
+      <h2 class="heading_text">Our Mission</h2>
+      <p id="ending" class="body_text">
+        Everyone has the right to have confidence in themselves and what is a
+        better way to do that than to put a bag over your head? Imagine a world
+        where you don't have to worry about your appearance and just leave your
+        home full of inner peace. We are making this dream a reality with our
+        movement to normalize bag faces!
+      </p>
     </div>
   </body>
 </html>
