--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bag Face Society</title>
+    <title>Bag Face Society | Gain True Confidence</title>
   </head>
   <link rel="stylesheet" href="styles.css" />
   <body class="page_background">
