--- a/join.html
+++ b/join.html
@@ -12,8 +12,12 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="join.html">Join</a>
-        <a href="#contact">Contact</a>
-        <a href="#donate">Donate</a>
+        <a href="https://www.youtube.com/watch?v=hys2LCTs8uU" target="_blank"
+          >Contact</a
+        >
+        <a href="https://www.youtube.com/watch?v=Bgqk6t9Be1Q" target="_blank"
+          >Donate</a
+        >
       </nav>
       <img id="header_logo" src="images/bag_mask_logo.png" alt="" />
       <p class="header_name">Bag Face Society</p>
@@ -24,6 +28,13 @@
         It's relatively easy to join our movement. Just make a mask and wear it
         proud!
       </p>
+      <div class="external_links">
+        <p class="body_text">
+          <a href="https://www.youtube.com/watch?v=BPp5RZxKGu4" target="_blank"
+            >Create Your Mask!</a
+          >
+        </p>
+      </div>
     </div>
     <div class="image_group1">
       <img id="oldie_bag_mask" src="images/oldie_bag_mask.jpg" alt="" />
