--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
         <a href="index.html">Home</a>
         <a href="about.html">About Us</a>
         <a href="join.html">Join</a>
-        <a href="#contact">Contact</a>
-        <a href="#donate">Donate</a>
+        <a href="https://www.youtube.com/watch?v=hys2LCTs8uU" target="_blank"
+          >Contact</a
+        >
+        <a href="https://www.youtube.com/watch?v=Bgqk6t9Be1Q" target="_blank"
+          >Donate</a
+        >
       </nav>
       <img id="header_logo" src="images/bag_mask_logo.png" alt="" />
       <p class="header_name">Bag Face Society</p>
